# vesar

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/core/: ann_index.rs  lib.rs
src/datasets/: synthetic_data.rs
src/metrics/: l2.rs
vesar/: Cargo.toml  main.rs
vesar/benches/: insert.rs  qps.rs  recall.rs
vesar/src/: core.rs  datasets.rs  main.rs
vesar/src/container/: heap.rs  lib.rs
vesar/src/core/: ann_index.rs  hnsw_index.rs  lib.rs  nsw_index.rs
vesar/src/datasets/: synthetic_data.rs
vesar/tests/: hnsw_tests.rs  nsw_tests.rs
