[package]
name = "vesar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vesar"
path = "src/main.rs"

[lib]
name = "vesar"
path = "src/lib.rs"

[dependencies]
# external
rand = "0.10.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "qps"
harness = false

[[bench]]
name = "recall"
harness = false